tests/baselines/reference/switchCasesExpressionTypeMismatch.errors.txt
tests/cases/compiler/switchCasesExpressionTypeMismatch.ts(4,10): error TS2678: Type 'typeof Foo' is not comparable to type 'number'.
tests/cases/compiler/switchCasesExpressionTypeMismatch.ts(5,10): error TS2678: Type 'string' is not comparable to type 'number'.
tests/cases/compiler/switchCasesExpressionTypeMismatch.ts(7,10): error TS2678: Type 'boolean' is not comparable to type 'number'.


==== tests/cases/compiler/switchCasesExpressionTypeMismatch.ts (3 errors) ====
    class Foo { }
    
    switch (0) {
        case Foo: break;    // Error
             ~~~
!!! error TS2678: Type 'typeof Foo' is not comparable to type 'number'.
        case "sss": break;  // Error
             ~~~~~
!!! error TS2678: Type 'string' is not comparable to type 'number'.
        case 123: break;    // No Error
        case true: break;   // Error
             ~~~~
!!! error TS2678: Type 'boolean' is not comparable to type 'number'.
    }
    
    var s: any = 0;
    
    // No error for all
    switch (s) {
        case Foo: break;
        case "sss": break;
        case 123: break;
        case true: break;
    }